--- a/src/components/home-item.module.css
+++ b/src/components/home-item.module.css
@@ -7,8 +7,9 @@
 .homeItem > img {
   display: block;
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
+  background-color: var(--background);
 }
 
 .homeItemContent {
